--- a/public/test/temperatureSensorTest.html
+++ b/public/test/temperatureSensorTest.html
@@ -9,11 +9,14 @@
 <body>
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
+<script type="text/javascript">
 
+</script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
 <script src="/javascripts/autobahn.js"></script>
+<script src="/javascripts/initwamp.js"></script>
 <script src="/javascripts/ejs.js"></script>
-<script src="/javascripts/temperatureSensorAPI.js"></script>
+<script src="/javascripts/api/temperaturesensorapi.js"></script>
 <script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
 <script src="/javascripts/test/temperatureSensorAPITest.js"></script>
 </body>
