refactor component.js and its testing

--- a/public/test/temperatureSensorTest.html
+++ b/public/test/temperatureSensorTest.html
@@ -16,8 +16,10 @@
 <script src="/javascripts/autobahn.js"></script>
 <script src="/javascripts/initwamp.js"></script>
 <script src="/javascripts/ejs.js"></script>
+<script src="/javascripts/api/componentapi.js"></script>
 <script src="/javascripts/api/temperaturesensorapi.js"></script>
 <script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
+<script src="/javascripts/Constant.js"></script>
 <script src="/javascripts/test/temperatureSensorAPITest.js"></script>
 </body>
 </html>
