--- a/public/test/LightActuatorTest.html
+++ b/public/test/LightActuatorTest.html
@@ -16,6 +16,7 @@
 <script src="/javascripts/autobahn.js"></script>
 <script src="/javascripts/initwamp.js"></script>
 <script src="/javascripts/ejs.js"></script>
+<script src="/javascripts/api/componentapi.js"></script>
 <script src="/javascripts/api/lightactuatorapi.js"></script>
 <script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
 <script src="/javascripts/Constant.js"></script>
