--- a/public/test/roomTest.html
+++ b/public/test/roomTest.html
@@ -11,18 +11,19 @@
     <a id='lightSwitch' href='/'>Switch</a>
 </div>
 
-<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-<!-- WAMP connection library -->
+<!--<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>-->
+<!--&lt;!&ndash; WAMP connection library &ndash;&gt;-->
 <script src="/javascripts/autobahn.js"></script>
-<!-- ejs templating library -->
-<script src="/javascripts/ejs.js"></script>
-<!-- make the connection to WAMP Server -->
-<script src="/javascripts/initwamp.js"></script>
-<script src="/javascripts/room.js"></script>
-<!-- qunit -->
+<!--&lt;!&ndash; ejs templating library &ndash;&gt;-->
+<!--<script src="/javascripts/ejs.js"></script>-->
+<!--&lt;!&ndash; make the connection to WAMP Server &ndash;&gt;-->
+<!--<script src="/javascripts/initwamp.js"></script>-->
+<!--<script src="/javascripts/room.js"></script>-->
+<!--&lt;!&ndash; qunit &ndash;&gt;-->
 <script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
-<!-- handlers -->
-<script src="/javascripts/Constant.js"></script>
-<script src="/javascripts/test/roomTest.js"></script>
+<!--&lt;!&ndash; handlers &ndash;&gt;-->
+<!--<script src="/javascripts/Constant.js"></script>-->
+<script data-main='/javascripts/room.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>
+<script src="/test/javascripts/testroomconfig.js"></script>
 </body>
 </html>
