--- a/public/test/roomTest.html
+++ b/public/test/roomTest.html
@@ -15,7 +15,7 @@
 <script src="/javascripts/autobahn.js"></script>
 <!--&lt;!&ndash; qunit &ndash;&gt;-->
 <script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
-<script data-main='/javascripts/roomwithswitch.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>
+<script data-main='/javascripts/room.js' src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>
 <script src="/test/javascripts/testconfig.js"></script>
 </body>
 </html>
