sun simulation test

--- a/public/test/testall.html
+++ b/public/test/testall.html
@@ -9,6 +9,11 @@
 <div id="qunit-fixture">
     This is a aura room, please turn on the light.
     <a id='lightSwitch' href='/'>Switch</a>
+    <div class="sunburst">
+        <div class="outer">
+            <b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b><b></b>
+        </div>
+    </div>
 </div>
 
 <script src="/javascripts/autobahn.js"></script>
