--- a/public/test/temperatureSensorTest.html
+++ b/public/test/temperatureSensorTest.html
@@ -12,11 +12,8 @@
 <script type="text/javascript">
 
 </script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script src="/javascripts/ejs.js"></script>
-<script src="/javascripts/api/temperaturesensorapi.js"></script>
 <script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
-<script src="/javascripts/Constant.js"></script>
-<script src="/javascripts/test/temperatureSensorAPITest.js"></script>
+<script data-main='/javascripts/test/temperatureSensorAPITest.js'
+        src='//cdnjs.cloudflare.com/ajax/libs/require-jquery/0.25.0/require-jquery.min.js'></script>
 </body>
 </html>
